Fix AnnotationProcessor Add integration test

--- a/jtesttools-demo/pom.xml
+++ b/jtesttools-demo/pom.xml
@@ -1,13 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jtesttools</groupId>
-    <artifactId>jtesttools-unittest-demo</artifactId>
+    <artifactId>jtesttools-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-
-    <name>jTest Tools Unit Test Demo</name>
-    <url>https://github.com/sandrogiacom/jtest-tools</url>
+    <packaging>pom</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,14 +19,10 @@
         <java.version>11</java.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jtesttools</groupId>
-            <artifactId>jtesttools-unittest</artifactId>
-            <version>${jtesttools.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>unittest-demo</module>
+        <module>integration-test-demo</module>
+    </modules>
 
     <build>
         <plugins>
@@ -52,7 +48,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                            <classesDirectory>target/classes</classesDirectory>
                             <skipTests>false</skipTests>
                         </configuration>
                     </execution>
