--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <module>jtesttools-parent</module>
         <module>jtesttools-unittest</module>
         <module>jtesttools-integration-test</module>
-        <module>jtesttools-unittest-demo</module>
+        <module>jtesttools-demo</module>
     </modules>
 
 </project>
