--- a/jtesttools-demo/integration-test-demo/src/test/resources/application.properties
+++ b/jtesttools-demo/integration-test-demo/src/test/resources/application.properties
@@ -1,2 +1,4 @@
-google.api.url=${mock.server}
-google.api.key=123
+#google.api.url=${mock.server}
+#google.api.key=123
+google.api.url=https://translation.googleapis.com
+google.api.key=AIzaSyCz3zVK4Ame3xMgLjSWh4s4PYzbPTS1Hf0
