--- a/jtesttools-demo/integration-test-demo/pom.xml
+++ b/jtesttools-demo/integration-test-demo/pom.xml
@@ -14,6 +14,10 @@
     <artifactId>integration-test-demo</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <junit.jupiter.version>5.4.0</junit.jupiter.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.jtesttools</groupId>
@@ -35,6 +39,24 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.1.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
