include database test configuration with testcontainers

--- a/jtesttools-demo/integration-test-demo/src/main/resources/application.properties
+++ b/jtesttools-demo/integration-test-demo/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 google.api.url=https://translation.googleapis.com
 google.api.key=${API_KEY}
+
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/tdc2019?useSSL=false
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.show-sql=true
